feat: verify otp endpoint
